# registry

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
src/registry/: __init__.py  registry.py  subclass_registry.py  types.py
tests/: test_registery.py
